# ray-zerocopy

./: .gitignore  .readthedocs.yaml  DOWNLOAD_AND_TEST.md  IMPLEMENTATION_SUMMARY.md  NOTICE  README.md  READY_FOR_TESTING.md  benchmark_memory.py  benchmark_results.json  pyproject.toml
.github/workflows/: publish.yml  test.yml
benchmarks/: benchmark_actor_memory.py  benchmark_comprehensive.py  benchmark_memory.py  common.py
docs/: METADATA_PRESERVATION.md  README.md  actor_usage.md  conf.py  getting_started.md  index.md  jit_wrappers.md  migration_guide.md  model_wrapper_guide.md  publishing.md  requirements.txt  test_actor_module.py  zerocopy-plan.md
docs/api_reference/: index.md  model_wrappers.md  wrappers.md
docs/tutorials/: basic_inference.md  index.md  pipeline_example.md  ray_data_batch.md
docs/user_guide/: actors.md  core_concepts.md  index.md  ray_data_integration.md  tasks.md  torchscript.md
examples/: check_readonly.py  example_jit.py  jit_actor_example.py  jit_actor_simple.py  model_wrapper_example.py  model_wrapper_pipeline_example.py  new_api_examples.py  ray_data_actor_example.py  test_imports.py  test_jit_quick.py  test_type_hints.py  test_wrapper_metadata.py  unified_model_wrapper_example.py  verify_implementation.py  verify_state_dict.py
src/ray_zerocopy/: __init__.py  _version.py  actor.py  invoke.py  model_wrappers.py  public.py  rewrite.py  wrappers.py
src/ray_zerocopy/_internal/: __init__.py  mixins.py  zerocopy.py
src/ray_zerocopy/benchmark/: __init__.py  execution.py  model.py  monitor.py  ray_utils.py  results.py  workers.py
src/ray_zerocopy/jit/: __init__.py  actor.py  actors.py  invoke.py  public.py  rewrite.py  tasks.py  utils.py
src/ray_zerocopy/nn/: __init__.py  actors.py  rewrite.py  tasks.py  utils.py
tests/: README.md  conftest.py  test_benchmark.py  test_invoke.py  test_invoke_jit.py  test_memory_footprint.py  test_model_wrapper_unified.py  test_rewrite.py  test_rewrite_jit.py  test_wrappers.py
