[project]
name = "ray-zerocopy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Kit Lee", email = "wklee4993@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "ray>=2.43",
    "torch>=2",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
ray-zerocopy = "ray_zerocopy:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v"
