[project]
name = "ray-zerocopy"
dynamic = ["version"]
description = "Zero-copy model sharing for PyTorch inference in Ray"
readme = "README.md"
authors = [
    { name = "Kit Lee", email = "wklee4993@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "ray[default]>=2.43",
    "torch>=2",
    "psutil>=5.9.0",
]

[project.urls]
Documentation = "https://ray-zerocopy.readthedocs.io"
Source = "https://github.com/wingkitlee0/ray-zerocopy"
Repository = "https://github.com/wingkitlee0/ray-zerocopy"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "coverage>=7.0.0",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme",
    "myst-parser",
    "sphinx-autodoc-typehints",
    "linkify-it-py",
]

[project.scripts]
ray-zerocopy = "ray_zerocopy:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/ray_zerocopy/_version.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v"

[tool.coverage.run]
source = ["src/ray_zerocopy"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "if False:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
precision = 2
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"
